demo-apps/springboot/manifests/namespace.yaml
# create amazon-cloudwatch namespace
apiVersion: v1
kind: Namespace
metadata:
  name: demo 
  labels:
    name: demo
