demo-apps/springboot/manifests/deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-example
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-example
  template:
    metadata:
      labels:
        app: spring-boot-example
    spec:
      containers:
        - name: spring-boot-example
          image: quay.io/nickmerrett/spring-boot-example:latest
          imagePullPolicy: Always 
          resources:
            limits:
              cpu:  1000m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
      terminationGracePeriodSeconds: 60
