demo-apps/springboot/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-example
  namespace: demo
spec:
  selector:
    app: spring-boot-example
  ports:
  - port: 8080
    targetPort: 8080
